
ADDONS:
	- Fixed: Net2ftp addon installer is broken

DOCS:
	- Fixed: Preseed template file is broken (compile time error)

ENGINE
	- Removed: Backtrace routines, which cause segfault on Debian Jessie (issues with Carp package)

SETUP:
	- Fixed: ispCP migration script is broken (many compile time errors)
	- Fixed: Uninstaller - Several compile time errors + missing tasks

GUI:
	- Fixed: Unable to view ticket (reseller level)

Tickets:
	- Fixed #936: Bug - Awstats addon - Failed to open directory /var/cache/awstats

------------------------------------------------------------------------------------------------------------------------
1.1.0-rc4.2
------------------------------------------------------------------------------------------------------------------------

2013-10-10: Laurent Declercq
	- RELEASE i-MSCP 1.1.0-rc4.2

CONFIG:
	- Changed: MASTER_GROUP parameter become IMSCP_GROUP
	- Fixed: Packages file for Debian Jessie (testing)
	- Fixed: Package dovecot-mysql is not available for Ubuntu Lucid
	- Fixed: Dovecot - Wrong path for delivery agent
	- Removed: Cron templates
	- Removed: Packages awstats, chkrootkit and rkhunter from global packages file

DOCS:
	- Updated: Preseed template file

ENGINE:
	- Changed: Both Chkrootkit and Rkhunter anti-rootkits as now provided as addons
	- Changed: skill command to pkill command (portability issues)
	- Fixed: Apache logrotate conffile shouldn't know about awstats addon
	- Fixed: Bind server impl. - Unable to handle subdomains when DNS server mode is set to 'slave'
	- Fixed: Bind uninstall fail
	- Fixed: iMSCP::Debug library - output() function called with wrong parameters
	- Fixed: iMSCP::SystemUser::delSystemUser() - Added 'keepHome' option allowing to kept user home directory
	- Fixed: PHP allow_url_fopen feature must be explicitly enabled in composer package installer
	- Updated: ispCP migration script

Tickets:
	- Fixed #636: Bug - Rkhunter - Unreadable log file